--- a/book_parts/stats/00-numpy-pandas-primer.ipynb
+++ b/book_parts/stats/00-numpy-pandas-primer.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,11 +285,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Book",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Price",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Quantity",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Rating",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "09c8eb72-1f99-4187-8249-38c36e329eab",
+       "rows": [
+        [
+         "0",
+         "微观经济学",
+         "120",
+         "30",
+         "4.5"
+        ],
+        [
+         "1",
+         "宏观经济学",
+         "85",
+         "15",
+         "4.0"
+        ],
+        [
+         "2",
+         "金融学",
+         "100",
+         "20",
+         "4.8"
+        ],
+        [
+         "3",
+         "会计学",
+         "75",
+         "10",
+         "3.9"
+        ],
+        [
+         "4",
+         "Python数据分析",
+         "95",
+         "25",
+         "4.1"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -364,7 +436,7 @@
        "4  Python数据分析     95        25     4.1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +488,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -450,6 +522,58 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Book",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Price",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "aeacee14-9ee4-44b8-8761-bbf1db0bd530",
+       "rows": [
+        [
+         "0",
+         "微观经济学",
+         "120"
+        ],
+        [
+         "1",
+         "宏观经济学",
+         "85"
+        ],
+        [
+         "2",
+         "金融学",
+         "100"
+        ],
+        [
+         "3",
+         "会计学",
+         "75"
+        ],
+        [
+         "4",
+         "Python数据分析",
+         "95"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -512,7 +636,7 @@
        "4  Python数据分析     95"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -546,6 +670,58 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Book",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Price",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "fa1054c9-09db-4f16-9bd9-d1f2a975fa40",
+       "rows": [
+        [
+         "0",
+         "微观经济学",
+         "120"
+        ],
+        [
+         "1",
+         "宏观经济学",
+         "85"
+        ],
+        [
+         "2",
+         "金融学",
+         "100"
+        ],
+        [
+         "3",
+         "会计学",
+         "75"
+        ],
+        [
+         "4",
+         "Python数据分析",
+         "95"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -608,7 +784,7 @@
        "4  Python数据分析     95"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -645,6 +821,64 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Book",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Price",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Quantity",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Rating",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "f9570ab2-b113-4f99-9a02-c1f20a129325",
+       "rows": [
+        [
+         "0",
+         "微观经济学",
+         "120",
+         "30",
+         "4.5"
+        ],
+        [
+         "1",
+         "宏观经济学",
+         "85",
+         "15",
+         "4.0"
+        ],
+        [
+         "2",
+         "金融学",
+         "100",
+         "20",
+         "4.8"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 3
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -703,7 +937,7 @@
        "2    金融学    100        20     4.8"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -737,6 +971,58 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Price",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Quantity",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "e5819f6e-958c-4940-9334-647df754137e",
+       "rows": [
+        [
+         "0",
+         "120",
+         "30"
+        ],
+        [
+         "1",
+         "85",
+         "15"
+        ],
+        [
+         "2",
+         "100",
+         "20"
+        ],
+        [
+         "3",
+         "75",
+         "10"
+        ],
+        [
+         "4",
+         "95",
+         "25"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -799,7 +1085,7 @@
        "4     95        25"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -837,6 +1123,64 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Book",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Price",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Quantity",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Rating",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "52e99fbe-9053-472a-8be1-d8ed5f2b39d3",
+       "rows": [
+        [
+         "0",
+         "微观经济学",
+         "120",
+         "30",
+         "4.5"
+        ],
+        [
+         "2",
+         "金融学",
+         "100",
+         "20",
+         "4.8"
+        ],
+        [
+         "4",
+         "Python数据分析",
+         "95",
+         "25",
+         "4.1"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 3
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -895,7 +1239,7 @@
        "4  Python数据分析     95        25     4.1"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -930,6 +1274,64 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Book",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Price",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Quantity",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Rating",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "c0bc751b-5cc4-41eb-b5d2-6b40d191dc3c",
+       "rows": [
+        [
+         "1",
+         "宏观经济学",
+         "85",
+         "15",
+         "4.0"
+        ],
+        [
+         "3",
+         "会计学",
+         "75",
+         "10",
+         "3.9"
+        ],
+        [
+         "4",
+         "Python数据分析",
+         "95",
+         "25",
+         "4.1"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 3
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -988,7 +1390,7 @@
        "4  Python数据分析     95        25     4.1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1055,6 +1457,88 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Book",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Price",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Quantity",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Rating",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Total Sales",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "6897049f-1ea1-4f06-972d-9676ab3bf42b",
+       "rows": [
+        [
+         "0",
+         "微观经济学",
+         "120",
+         "30",
+         "4.5",
+         "3600"
+        ],
+        [
+         "4",
+         "Python数据分析",
+         "95",
+         "25",
+         "4.1",
+         "2375"
+        ],
+        [
+         "2",
+         "金融学",
+         "100",
+         "20",
+         "4.8",
+         "2000"
+        ],
+        [
+         "1",
+         "宏观经济学",
+         "85",
+         "15",
+         "4.0",
+         "1275"
+        ],
+        [
+         "3",
+         "会计学",
+         "75",
+         "10",
+         "3.9",
+         "750"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1135,7 +1619,7 @@
        "3         会计学     75        10     3.9          750"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1198,6 +1682,88 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Book",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Price",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Quantity",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Rating",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Total Sales",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "4b687a4e-510f-48e8-8ab3-a2a70efacb67",
+       "rows": [
+        [
+         "0",
+         "微观经济学",
+         "120",
+         "30",
+         "4.5",
+         "3600"
+        ],
+        [
+         "1",
+         "宏观经济学",
+         "85",
+         "15",
+         "4.0",
+         "1275"
+        ],
+        [
+         "2",
+         "金融学",
+         "100",
+         "20",
+         "4.8",
+         "2000"
+        ],
+        [
+         "3",
+         "会计学",
+         "75",
+         "10",
+         "3.9",
+         "750"
+        ],
+        [
+         "4",
+         "Python数据分析",
+         "95",
+         "25",
+         "4.1",
+         "2375"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1278,7 +1844,7 @@
        "4  Python数据分析     95        25     4.1         2375"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1881,7 @@
     "- Quantity: 20\n",
     "- Rating: 4.3\n",
     "\n",
-    "**提示：** 使用`append()`函数或`concat()`函数来添加新行。\n"
+    "**提示：** 使用`concat()`函数来添加新行，注意`append()`方法在新版本的pandas中已经被弃用。\n"
    ]
   }
  ],
@@ -1335,7 +1901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
