--- a/book_parts/stats/03-linear_reg.ipynb
+++ b/book_parts/stats/03-linear_reg.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "9a3b7f11",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "       dtype='object'))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "57b6d494",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "1fa0eaf3",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "e926a7e9",
    "metadata": {},
    "outputs": [
@@ -207,8 +207,8 @@
       "Dep. Variable:                   wage   R-squared:                       0.364\n",
       "Model:                            OLS   Adj. R-squared:                  0.359\n",
       "Method:                 Least Squares   F-statistic:                     74.40\n",
-      "Date:                Thu, 12 Dec 2024   Prob (F-statistic):           7.30e-50\n",
-      "Time:                        03:11:57   Log-Likelihood:                -1314.2\n",
+      "Date:                Thu, 22 May 2025   Prob (F-statistic):           7.30e-50\n",
+      "Time:                        22:11:12   Log-Likelihood:                -1314.2\n",
       "No. Observations:                 526   AIC:                             2638.\n",
       "Df Residuals:                     521   BIC:                             2660.\n",
       "Df Model:                           4                                         \n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "617608d6",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
     "\n",
     "在Jupyter Notebook的python单元格中执行如下代码，注意开头有个感叹号：\n",
     "\n",
-    "`!pip install linearmodels`"
+    "`!pip install -i https://pypi.tuna.tsinghua.edu.cn/simple linearmodels`"
    ]
   },
   {
@@ -392,12 +392,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "5aad6159",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "invest",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "value",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "capital",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "firm",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "year",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "dc430974-65ff-473c-adcc-da8df166a537",
+       "rows": [
+        [
+         "0",
+         "317.6",
+         "3078.5",
+         "2.8",
+         "General Motors",
+         "1935.0"
+        ],
+        [
+         "1",
+         "391.8",
+         "4661.7",
+         "52.6",
+         "General Motors",
+         "1936.0"
+        ],
+        [
+         "2",
+         "410.6",
+         "5387.1",
+         "156.9",
+         "General Motors",
+         "1937.0"
+        ],
+        [
+         "3",
+         "257.7",
+         "2792.2",
+         "209.2",
+         "General Motors",
+         "1938.0"
+        ],
+        [
+         "4",
+         "330.8",
+         "4313.2",
+         "203.4",
+         "General Motors",
+         "1939.0"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -478,7 +559,7 @@
        "4   330.8  4313.2    203.4  General Motors  1939.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,12 +581,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "98cacb4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "('firm', 'year')",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "invest",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "value",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "capital",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "a375efc6-257b-43af-bae4-523dbd686178",
+       "rows": [
+        [
+         "('General Motors', 1935.0)",
+         "317.6",
+         "3078.5",
+         "2.8"
+        ],
+        [
+         "('General Motors', 1936.0)",
+         "391.8",
+         "4661.7",
+         "52.6"
+        ],
+        [
+         "('General Motors', 1937.0)",
+         "410.6",
+         "5387.1",
+         "156.9"
+        ],
+        [
+         "('General Motors', 1938.0)",
+         "257.7",
+         "2792.2",
+         "209.2"
+        ],
+        [
+         "('General Motors', 1939.0)",
+         "330.8",
+         "4313.2",
+         "203.4"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -584,7 +726,7 @@
        "               1939.0   330.8  4313.2    203.4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "569c93f5",
    "metadata": {},
    "outputs": [],
@@ -659,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "fd1aa36a",
    "metadata": {},
    "outputs": [
@@ -709,6 +851,7 @@
    "metadata": {},
    "source": [
     "注意到\n",
+    "\n",
     "1. 2个“FE”列的最下方，显示这2个模型已经控制了个体和时间固定效应。\n",
     "2. Cov. Est.行， 显示FE-Cluster模型使用了聚类标准误。\n"
    ]
