添加聚类的题目

--- a/book_parts/stats/04-clustering.ipynb
+++ b/book_parts/stats/04-clustering.ipynb
@@ -62,6 +62,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "进行分析之前的例行公事代码："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 以下都是例行公事，直接拷贝即可\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "\n",
+    "# 导入matplotlib.pyplot绘图库，其中plt.plot()是最常用的绘图函数之一\n",
+    "import matplotlib.pyplot as plt \n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set_theme() # 默认用seaborn的绘图样式\n",
+    "\n",
+    "# 设置字体。如果不设置，中文可能会乱码。这里采用冬青黑、微软雅黑和文泉驿微米黑，一般情况都没问题。\n",
+    "plt.rcParams[\"font.sans-serif\"]=[\"Hiragino Sans GB\", \"Microsoft YaHei\", \"WenQuanYi Micro Hei\"] \n",
+    "\n",
+    "plt.rcParams[\"axes.unicode_minus\"]=False #该语句解决图像中的“-”负号的乱码问题\n",
+    "\n",
+    "# 绘图使用'svg'后端：svg是矢量格式，可以任意缩放均保持清晰，各种屏幕的显示良好。\n",
+    "%config InlineBackend.figure_formats = ['svg']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 一个范例\n",
     "\n",
     "我们对一个虚拟数据中的样本进行聚类，我们的目标是问：每一个样本属于哪一类？\n",
@@ -7020,6 +7054,255 @@
     "plt.xlabel(iris_subset.columns[0])\n",
     "plt.ylabel(iris_subset.columns[1])\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 小练习\n",
+    "\n",
+    "有一批企鹅的数据 [penguins.csv](data/penguins.csv) (可下载，注意保存在你的代码能读取的地方)，其中的变量包括：\n",
+    "\n",
+    "- species (种类): 企鹅的具体种类 (例如: Adelie, Chinstrap, Gentoo)。这是我们希望通过聚类间接发现或验证的分组依据。\n",
+    "- island (岛屿): 企鹅被观察到的栖息岛屿 (例如: Torgersen, Biscoe, Dream)。\n",
+    "- bill_length_mm (喙长度): 企鹅喙的长度，单位毫米。\n",
+    "- bill_depth_mm (喙深度): 企鹅喙的深度（或高度），单位毫米。\n",
+    "- flipper_length_mm (鳍长度): 企鹅鳍的长度，单位毫米。\n",
+    "- body_mass_g (体重): 企鹅的体重，单位克。\n",
+    "- sex (性别): 企鹅的性别 (Male, Female)\n",
+    "\n",
+    "假定品种是未知的，就像你刚刚发现企鹅这种动物一样。我们要对企鹅进行分类，只能依靠企鹅的外观特征。请你根据企鹅的特征，对企鹅进行k-means聚类，以区分每个样本的归属。\n",
+    "\n",
+    "提示：\n",
+    "\n",
+    "1. 数据简单处理的代码已经给出。\n",
+    "2. 聚类需要用企鹅的什么数据？（提示：当然是不同品种的企鹅可能有差异的数据，比如喙、鳍和体重）\n",
+    "3. 数据的量纲有差异，考虑标准化，比如前面提到的Z-score。\n",
+    "4. 对于kmeans，这里怎么确定要分几组？\n",
+    "5. 给出聚类的结果。\n",
+    "6. （进阶）找2个特征，绘制散点图。\n",
+    "7. （进阶）进行聚类后，能否利用真实的品种信息，计算你聚类的准确率？\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "species",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "island",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "bill_length_mm",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "bill_depth_mm",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "flipper_length_mm",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "body_mass_g",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "sex",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "fd7f3e06-6b05-4f81-86eb-5e8acfedfc04",
+       "rows": [
+        [
+         "0",
+         "Adelie",
+         "Torgersen",
+         "39.1",
+         "18.7",
+         "181.0",
+         "3750.0",
+         "Male"
+        ],
+        [
+         "1",
+         "Adelie",
+         "Torgersen",
+         "39.5",
+         "17.4",
+         "186.0",
+         "3800.0",
+         "Female"
+        ],
+        [
+         "2",
+         "Adelie",
+         "Torgersen",
+         "40.3",
+         "18.0",
+         "195.0",
+         "3250.0",
+         "Female"
+        ],
+        [
+         "4",
+         "Adelie",
+         "Torgersen",
+         "36.7",
+         "19.3",
+         "193.0",
+         "3450.0",
+         "Female"
+        ],
+        [
+         "5",
+         "Adelie",
+         "Torgersen",
+         "39.3",
+         "20.6",
+         "190.0",
+         "3650.0",
+         "Male"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>3250.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>3650.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0  Adelie  Torgersen            39.1           18.7              181.0   \n",
+       "1  Adelie  Torgersen            39.5           17.4              186.0   \n",
+       "2  Adelie  Torgersen            40.3           18.0              195.0   \n",
+       "4  Adelie  Torgersen            36.7           19.3              193.0   \n",
+       "5  Adelie  Torgersen            39.3           20.6              190.0   \n",
+       "\n",
+       "   body_mass_g     sex  \n",
+       "0       3750.0    Male  \n",
+       "1       3800.0  Female  \n",
+       "2       3250.0  Female  \n",
+       "4       3450.0  Female  \n",
+       "5       3650.0    Male  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "penguins_df = pd.read_csv('data/penguins.csv')\n",
+    "penguins_df.dropna(inplace=True)  # 删除缺失值\n",
+    "penguins_df.head()"
    ]
   }
  ],
