添加误差棒的说明

--- a/book_parts/data_processing/12.1-seaborn.ipynb
+++ b/book_parts/data_processing/12.1-seaborn.ipynb
@@ -15703,7 +15703,7 @@
     "\n",
     "**需求：** `countplot` 只能展示频数。如果我们想知道每天的**平均**消费总额是多少，就需要用到 `barplot`。\n",
     "\n",
-    "**方法：** 使用 `sns.barplot()`。它会计算一个数值变量在一个类别变量不同水平上的集中趋势（默认为均值）。\n",
+    "**方法：** 使用 `sns.barplot()`。它会计算一个数值变量在一个类别变量不同水平上的集中趋势（默认为均值）。 黑色竖线是“误差棒”，默认表示95%置信区间。\n",
     "\n",
     "**范例 1：基础柱状图**"
    ]
